# TimeMesh

./: .coverage  .flake8  README.md  pyproject.toml
.github/workflows/: CI.yml  cd.yml  ci.yml
examples/: Untitled3.ipynb
test/: test_data_loader.py
tests/: conftest.py  test_data.csv  test_data_loader.py  test_data_split.py  test_preprocessing.py
timemesh/: __init__.py  data_loader.py  data_split.py  preprocessing.py
