[tool.poetry]
name = "timemesh"
version = "0.1.0"
description = "Spatio-temporal data preparation toolkit"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^1.24.0"
xarray = "^2025.1.2"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^24.4.0"  # Added black here
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Optional: Add black configuration
[tool.black]
line-length = 120
target-version = ['py312']