[tool.poetry]
name = "timemesh"
version = "0.2.2"
description = "Time series preprocessing toolkit: Windowing, normalization & dataset splitting for LSTM/TCN/ConvLSTM/Transformer models, "  
authors = ["Laeeq <Laeeq.aslam.100@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",  # New classifier
    "Topic :: Scientific/Engineering :: Information Analysis"  # Additional category
]
keywords = [
    "time-series", 
    "machine-learning", 
    "data-preprocessing",
    "temporal-windowing",  # Specific to your features
    "dataset-splitting", 
    "time-series-normalization", 
    "lstm-data-preparation",  # Target ML users
    "transformer-models"
]
homepage = "https://github.com/L-A-Sandhu/timemesh"
repository = "https://github.com/L-A-Sandhu/timemesh"
documentation = "https://github.com/L-A-Sandhu/timemesh/blob/main/README.md"

# Rest of the file remains EXACTLY THE SAME ▼

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=2.0.3"
numpy = ">=1.21.0"
xarray = ">=2023.1.0"
scikit-learn = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.1"  
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
black = { version = "^24.4.0", extras = ["jupyter"] }
flake8 = "^7.0.0"
mypy = "^1.10.0"
backports-tarfile = "^1.2.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
timemesh = "timemesh.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]